# Fly-in

./: Makefile  Schedule.txt  main.py  pyproject.toml
logout/: errors.txt
maps/easy/: 01_linear_path.txt
src/: __main__.py  colors.py  models.py  parser.py
srcs/managing/: manager.py
srcs/parsing/: colors.py  models.py  parser.py
srcs/solver/: graph_solver.py  solver.py
srcs/visualizer/: game.py
visualizer/: pygame_renderer.py  renderer_game.py
