[project]
name = "fly-in"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "textual>=7.5.0",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1"
]